--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,4 +100,6 @@ dependencies {
     //safeargs
     implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
+    //google Places
+    implementation 'com.google.android.libraries.places:places:3.0.0'
 }
