--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,9 +77,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
 
-    //lottie
-    implementation 'com.airbnb.android:lottie:4.2.0'
-
     //google service
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation "com.google.android.material:material:1.3.0-alpha02"
@@ -107,4 +104,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
     //lottie
     implementation 'com.airbnb.android:lottie:3.4.0'
+    //for Kotlin + workManager
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
 }
