--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WeatherApp"
-        tools:targetApi="31">
-
+        tools:targetApi="31" >
+        <activity
+            android:name=".view.ui.main.MainActivity"
+            android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -36,8 +38,9 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDoedG1Y17WiQCwp_shI0nx2U0_vkpF_9M" />
+
         <activity
-            android:name=".MapsActivity"
+            android:name=".view.ui.map.MapsActivity"
             android:exported="false"
             android:label="@string/title_activity_maps" />
 
@@ -47,7 +50,7 @@
             android:label="@string/title_activity_home" />
 
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.ui.main.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
