--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     //retrofit
@@ -106,4 +108,30 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.4.0'
     //for Kotlin + workManager
     implementation "androidx.work:work-runtime-ktx:2.7.1"
+
+    ////////////////////////////////////////////////////////////////////
+
+    testImplementation "org.hamcrest:hamcrest:2.2"
+    testImplementation "org.hamcrest:hamcrest-library:2.2"
+    //
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //
+    testImplementation"androidx.test:core-ktx:$androidXTestCoreVersion"
+    testImplementation"androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
+    //
+    testImplementation "org.robolectric:robolectric:4.8"
+    //
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    // AndroidX Test - JVM testing
+    testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
+    testImplementation "androidx.test.ext:junit:$androidXTestExtKotlinRunnerVersion"
+
+    // AndroidX Test - Instrumented testing
+    androidTestImplementation "androidx.test.ext:junit:$androidXTestExtKotlinRunnerVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
+    implementation"org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
+    testImplementation"org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
 }
